--- a/_config.yml
+++ b/_config.yml
@@ -11,7 +11,7 @@ title                    : "Hamid Arzani"
 title_separator          : "-"
 name                     : &name "Hamid Arzani"
 description              : &description "PhD Student at Rotman School of Management"
-url                      : https://academicpages.github.io # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
+url                      : https://hamidarzani.github.io # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
 baseurl                  : "" # the subpath of your site, e.g. "/blog"
 repository               : "hamidarzani/hamidarzani.github.io"
 teaser                   :  # filename of teaser fallback teaser image placed in /images/, .e.g. "500x300.png"
@@ -85,7 +85,7 @@ author:
   bio              : "PhD Student at Rotman School of Management"
   location         : "Toronto, ON"
   employer         :
-  pubmed           : "https://www.ncbi.nlm.nih.gov/pubmed/?term=john+snow"
+  pubmed           :
   googlescholar    :
   email            :
   researchgate     :  # example: "https://www.researchgate.net/profile/yourprofile"
