--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -1,7 +1,7 @@
 # main links links
 main:
-  - title: "Publications"
-    url: /publications/
+  #- title: "Publications"
+  #  url: /publications/
 
   - title: "Talks"
     url: /talks/    
@@ -9,5 +9,5 @@ main:
   - title: "Teaching"
     url: /teaching/
 
-  - title: "CV"
-    url: /cv/
+ # - title: "CV"
+ #   url: /cv/
