--- a/_config.yml
+++ b/_config.yml
@@ -83,8 +83,8 @@ author:
   name             : "Hamid Arzani"
   avatar           : "profile.png"
   bio              : "Ph.D. Student in Operations Management and Statistics"
-  location         : "Toronto, ON"
-  employer         : "Rotman School of Management, University of Toronto"
+  location         : "Rotman School of Management"
+  employer         : "University of Toronto"
   pubmed           :
   googlescholar    :
   email            : "hamid.arzani@rotman.utoronto.ca"
