--- a/_config.yml
+++ b/_config.yml
@@ -89,7 +89,7 @@ author:
   googlescholar    :
   email            : "hamid.arzani@rotman.utoronto.ca"
   researchgate     :  # example: "https://www.researchgate.net/profile/yourprofile"
-  uri              :
+  uri              : "https://www.rotman.utoronto.ca/Degrees/PhD/PhDStudentBios/Hamid-Arzani"
   bitbucket        :
   codepen          :
   dribbble         :
