--- a/_config.yml
+++ b/_config.yml
@@ -84,8 +84,8 @@ author:
   avatar           : "profile.png"
   bio              : "Ph.D. Student in Operations Management and Statistics"
   email            : "hamid.arzani@rotman.utoronto.ca"
-  location         : "Rotman School of Management"
-  employer         : "University of Toronto"
+  location         : 
+  employer         :
   pubmed           :
   googlescholar    :
   researchgate     :  # example: "https://www.researchgate.net/profile/yourprofile"
