--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -3,11 +3,13 @@ main:
   #- title: "Publications"
   #  url: /publications/
 
+  - title: "Research"
+    url: /research/
+
   - title: "Talks"
     url: /talks/    
 
-  - title: "Teaching"
-    url: /teaching/
+
 
  # - title: "CV"
  #   url: /cv/
