--- a/_config.yml
+++ b/_config.yml
@@ -10,7 +10,7 @@ locale                   : "en-US"
 title                    : "Hamid Arzani"
 title_separator          : "-"
 name                     : &name "Hamid Arzani"
-description              : &description "PhD Student at Rotman School of Management"
+description              : &description "PhD Candidate at Rotman School of Management"
 url                      : https://hamidarzani.github.io # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
 baseurl                  : "" # the subpath of your site, e.g. "/blog"
 repository               : "hamidarzani/hamidarzani.github.io"
