--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,30 +1,36 @@
-name: Deploy static site to GitHub Pages
+name: Deploy static website to GitHub Pages
 
 on:
   push:
     branches:
-      - main  # or 'master' if your default branch is named master
+      - main  # change to 'master' if your default branch is named that
 
 permissions:
   contents: read
   pages: write
   id-token: write
 
+concurrency:
+  group: "pages"
+  cancel-in-progress: true
+
 jobs:
   deploy:
+    environment:
+      name: github-pages
+      url: ${{ steps.deployment.outputs.page_url }}
     runs-on: ubuntu-latest
-
     steps:
-      - name: Checkout code
+      - name: Checkout repository
         uses: actions/checkout@v4
 
       - name: Setup Pages
         uses: actions/configure-pages@v5
 
-      - name: Upload static site content
+      - name: Upload static site files
         uses: actions/upload-pages-artifact@v3
         with:
-          path: .  # This uploads everything in your root folder (HTML, CSS, etc.)
+          path: .  # Upload everything from the repo root
 
       - name: Deploy to GitHub Pages
         id: deployment
