--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -3,7 +3,7 @@ name: Deploy static website to GitHub Pages
 on:
   push:
     branches:
-      - main  # change to 'master' if your default branch is named that
+      - master  # change to 'master' if your default branch is named that
 
 permissions:
   contents: read
